# Moneychanger

./: CMakeLists.txt
cmake/: FindJsoncpp.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/handlers/: contacthandler.cpp
src/core/network/: Network.h
src/gui/: CMakeLists.txt
